--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class=" d-flex align-items-center">
             <ul class="d-flex  align-items-center list-unstyled m-0">
               <li>
-                <a href="#" class="btn btn-secondary px-4 py-2">CONTACTO</a>
+                <a href="mailto:clientes@aluworks.com.ar" class="btn btn-secondary px-4 py-2" target="_blank">CONTACTO</a>
               </li>
               <li>
                 <a href="#" class="ms-3">
