--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </nav>
 
   <section id="hero" style="background-image:url(images/alu_home.jpg); background-repeat: no-repeat; background-position:top; ">
-    <div class="container-fluid p-5">
+    <div class="container-fluid p-lg-5">
       <div class="row align-items-center">
         <div class="col-md-6 pe-5 mt-5">
           <h1 class="text-light fs-11">Una nueva mirada <br> para disfrutar <br> tu casa</h1>
@@ -193,7 +193,7 @@
           
             </div>
 
-            <div class="row col-md-7 align-items-center mt-2 d-sm-flex d-lg-none">
+            <div class="row col-md-7 align-items-center mt-1 d-sm-flex d-lg-none">
          
               <div class="" >
                 <div class=" ">
