--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="row align-items-center">
         <div class="col-md-6 pe-5 mt-5">
           <h1 class="text-light fs-11">Una nueva mirada <br> para disfrutar <br> tu casa</h1>
-          <p class="fs-5 my-4 pb-2 text-light " style="line-height: initial;">Fabricamos y distribuimos accesorios para aberturas que
+          <p class="fs-5 my-4 pb-2 text-light " style="line-height: 35px;">Fabricamos y distribuimos accesorios para aberturas que
             se destacan en diseño e innovación, siempre cuidando la
             funcionalidad y la calidad.
             </p>
