--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="row align-items-center">
         <div class="col-md-6 pe-5 mt-5">
           <h1 class="text-light fs-11">Una nueva mirada <br> para disfrutar <br> tu casa</h1>
-          <p class="fs-5 my-4 pb-2 text-light " style="line-height: 45px;">Fabricamos y distribuimos accesorios para aberturas que
+          <p class="fs-5 my-4 pb-2 text-light " style="line-height: 35px;">Fabricamos y distribuimos accesorios para aberturas que
             se destacan en diseño e innovación, siempre cuidando la
             funcionalidad y la calidad.
             </p>
@@ -219,7 +219,7 @@
               hacen la diferencia</h2>
            
           </div>
-          <p class="fs-6 fw-semibold">Ofrecemos asesoramiento a clientes basados en 30 años de experiencia
+          <p class="fs-6 fw-semibold" style="line-height: 35px;">Ofrecemos asesoramiento a clientes basados en 30 años de experiencia
             en la industria, conocimiento técnico y compromiso con relaciones
             de valor a largo plazo. Nuestra oferta incluye una amplia gama de
             productos, fabricando nuestra línea ALUWORKS en España y siendo
